Add AccountingAITest which uses JLama.